package com.example.sharingapp;

public enum Status {
    BORROWED,
    AVAILABLE
}
