package com.example.sharingapp;

import java.util.List;

public class User {
    private List<Item> itemList;
    private String firstName;
    private String lastName;
    private String email;
    private String phone;


}
