@startuml

title __APP's Class Diagram__\n

  namespace com.example.sharingapp {
    class com.example.sharingapp.AddItemActivity {
    }
  }
  

  namespace com.example.sharingapp {
    class com.example.sharingapp.AllItemsFragment {
    }
  }
  

  namespace com.example.sharingapp {
    class com.example.sharingapp.AvailableItemsFragment {
    }
  }
  

  namespace com.example.sharingapp {
    class com.example.sharingapp.BorrowedItemsFragment {
    }
  }
  

  namespace com.example.sharingapp {
    class com.example.sharingapp.BuildConfig {
    }
  }
  

  namespace com.example.sharingapp {
    class com.example.sharingapp.Dimensions {
    }
  }
  

  namespace com.example.sharingapp {
    class com.example.sharingapp.EditItemActivity {
    }
  }
  

  namespace com.example.sharingapp {
    class com.example.sharingapp.Item {
    }
  }
  

  namespace com.example.sharingapp {
    class com.example.sharingapp.ItemAdapter {
    }
  }
  

  namespace com.example.sharingapp {
    class com.example.sharingapp.ItemList {
    }
  }
  

  namespace com.example.sharingapp {
    abstract class com.example.sharingapp.ItemsFragment {
    }
  }
  

  namespace com.example.sharingapp {
    class com.example.sharingapp.MainActivity {
    }
  }
  

  namespace com.example.sharingapp {
    class com.example.sharingapp.SectionsPagerAdapter {
    }
  }
  

  namespace com.example.sharingapp {
    enum Status {
    }
  }
  

  namespace com.example.sharingapp {
    class com.example.sharingapp.User {
    }
  }
  

  com.example.sharingapp.AddItemActivity -up-|> android.support.v7.app.AppCompatActivity
  com.example.sharingapp.AddItemActivity o-- com.example.sharingapp.ItemList : item_list
  com.example.sharingapp.AllItemsFragment -up-|> com.example.sharingapp.ItemsFragment
  com.example.sharingapp.AvailableItemsFragment -up-|> com.example.sharingapp.ItemsFragment
  com.example.sharingapp.BorrowedItemsFragment -up-|> com.example.sharingapp.ItemsFragment
  com.example.sharingapp.EditItemActivity -up-|> android.support.v7.app.AppCompatActivity
  com.example.sharingapp.EditItemActivity o-- com.example.sharingapp.Item : item
  com.example.sharingapp.EditItemActivity o-- com.example.sharingapp.ItemList : item_list
  com.example.sharingapp.Item o-- com.example.sharingapp.Dimensions : dimensions
  com.example.sharingapp.Item o-- com.example.sharingapp.Status : status
  com.example.sharingapp.ItemAdapter -up-|> android.widget.ArrayAdapter
  com.example.sharingapp.ItemsFragment -up-|> android.support.v4.app.Fragment
  com.example.sharingapp.ItemsFragment o-- com.example.sharingapp.ItemList : item_list
  com.example.sharingapp.MainActivity -up-|> android.support.v7.app.AppCompatActivity
  com.example.sharingapp.SectionsPagerAdapter -up-|> android.support.v4.app.FragmentPagerAdapter


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
